--- a/src/app/design/organisms/user-row/user-row.component.html
+++ b/src/app/design/organisms/user-row/user-row.component.html
@@ -18,7 +18,7 @@
       [createOptions]="{
         valueProp: 'id',
         labelProp: 'name',
-        options: groups,
+        options: groups ?? [],
       }"
       [label]="'Permission-Groups'"
       (entryCreate)="addGroup.emit($event)"
