Refine signal features and their types

--- a/src/app/core/campaign-overview-page/campaign-overview-page.component.html
+++ b/src/app/core/campaign-overview-page/campaign-overview-page.component.html
@@ -1,7 +1,7 @@
 <app-campaign-overview
   [serverUrl]="serverUrl"
   [userName]="userName"
-  [campaigns]="(campaigns$ | async)!"
+  [campaigns]="campaigns()"
   [isGlobalAdmin]="isGlobalAdmin"
   (logout)="logout()"
 ></app-campaign-overview>
