Refactor campaign-overview to entirely use store

--- a/src/app/core/campaign-overview-page/campaign-overview-page.component.html
+++ b/src/app/core/campaign-overview-page/campaign-overview-page.component.html
@@ -1,7 +1,7 @@
 <app-campaign-overview
   [serverUrl]="serverUrl"
-  [userName]="userName"
+  [userName]="userName()"
   [campaigns]="campaigns()"
-  [isGlobalAdmin]="isGlobalAdmin"
+  [isGlobalAdmin]="isGlobalAdmin()"
   (logout)="logout()"
 ></app-campaign-overview>
