--- a/src/design/molecules/search-field/search-field.component.scss
+++ b/src/design/molecules/search-field/search-field.component.scss
@@ -4,27 +4,29 @@
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration { display: none; }
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
 
-.search{
+.search {
   margin-bottom: var(--spacer-4);
-  
-  &__form{
+
+  &__form {
     flex: 1;
     padding: var(--spacer-2);
   }
-  
-  &__bar{
+
+  &__bar {
     display: flex;
     align-items: center;
     background-color: var(--bs-gray-800);
     padding-left: var(--spacer-2);
     border-color: var(--bs-white);
-    border: solid 1px var(--bs-white);
+    border: solid 2px var(--bs-white);
     border-radius: var(--bs-border-radius);
   }
-  
-  &__input{
+
+  &__input {
     background-color: var(--bs-gray-800);
     border: none;
     outline: none;
