Improve all the animations

--- a/src/design/templates/campaign-overview/campaign-overview.component.html
+++ b/src/design/templates/campaign-overview/campaign-overview.component.html
@@ -1,4 +1,4 @@
-<div class="container" [@slideInOut]>
+<div class="container">
   <div class="row campaign__heading heading">
     <div class="heading__buttons">
       <a [routerLink]="profileUrl" class="heading__button">
@@ -37,7 +37,9 @@
     </div>
 
     <h3 class="heading__text">
-      <ng-container *ngIf="campaigns && campaigns.length > 0; else noCampaignHeading">
+      <ng-container
+        *ngIf="campaigns && campaigns.length > 0; else noCampaignHeading"
+      >
         Choose Your Campaign
       </ng-container>
       <app-spinner *ngIf="campaigns == null"></app-spinner>
@@ -57,25 +59,24 @@
         ></app-image-grid>
       </ng-container>
     </ng-container>
-
   </div>
 </div>
 
 <ng-template #noCampaign>
   <div class="w-100 h-100 position-relative d-flex justify-content-center">
-    <img class="w-100 h-100" [src]="dragonFrameUrl" alt="Placeholder image for when no campaigns are available">
+    <img
+      class="w-100 h-100"
+      [src]="dragonFrameUrl"
+      alt="Placeholder image for when no campaigns are available"
+    />
     <div class="position-absolute frame-text">
-      <h4 class="mb-1">
-        You have not yet been invited into any campaign.
-      </h4>
+      <h4 class="mb-1">You have not yet been invited into any campaign.</h4>
       <div>
-        Please inform your DM or the person within your group administrating the webserver 
-        to add you to the required permission group.
+        Please inform your DM or the person within your group administrating the
+        webserver to add you to the required permission group.
       </div>
     </div>
   </div>
 </ng-template>
 
-<ng-template #noCampaignHeading>
-    No Campaign available!
-</ng-template>
+<ng-template #noCampaignHeading> No Campaign available! </ng-template>
