--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-page
   [serverUrl]="serverUrl"
+  [hasCampaignAdminPrivileges]="hasCampaignAdminPrivileges()"
   [campaign]="campaign()"
   (logout)="logout()"
 ></app-page>
