--- a/src/design/organisms/page/page.component.html
+++ b/src/design/organisms/page/page.component.html
@@ -1,26 +1,18 @@
-<ng-container *ngIf="campaign">
-  <app-sidebar
-    #sidebar
-    class="sidebar sidebar--mobile-visible"
-    [campaign]="campaign"
-    (logout)="logout.emit()"
-  ></app-sidebar>
-</ng-container>
+<app-sidebar
+  #sidebar
+  class="sidebar"
+  [@sidebarSlideInOut]="campaign ? 'visible' : 'hidden'"
+  [class.sidebar--mobile-visible]="showSidebar"
+  [campaign]="campaign"
+  [hasCampaignAdminPrivileges]="hasCampaignAdminPrivileges"
+  (logout)="logout.emit()"
+></app-sidebar>
 
-<div 
-  class="page" 
-  [class.page--shift-right]="showSidebar" 
-  #content
->
-  
-  <div 
-    class="page__content" 
-    (scroll)="onPageScroll($event)"
-    #innerContent
-  >  
+<div class="page" [class.page--shift-right]="showSidebar" #content>
+  <div class="page__content" (scroll)="onPageScroll($event)" #innerContent>
     <router-outlet #routerOutlet></router-outlet>
   </div>
-  
+
   <app-page-background
     #background
     class="page__background"
