--- a/src/app/core/config-administration-page/config-administration-page.component.html
+++ b/src/app/core/config-administration-page/config-administration-page.component.html
@@ -1,5 +1,5 @@
 <app-config-tables
-  [tableData]="tableData()"
+  [tableData]="(tableData$ | async) ?? {}"
   (loadTableEntries)="loadTableEntries($event)"
   (deleteTableEntry)="deleteTableEntry($event)"
   (createTableEntry)="createTableEntry($event)"
