Implement empty-search stuff

--- a/src/app/campaign/pages/campaign-admin-page/campaign-admin-page.component.html
+++ b/src/app/campaign/pages/campaign-admin-page/campaign-admin-page.component.html
@@ -13,6 +13,8 @@
     (removeAdmin)="removeMemberFromCampaignGroup('ADMIN', $event)"
     (removeMember)="removeMemberFromCampaignGroup('MEMBER', $event)"
     (removeGuest)="removeMemberFromCampaignGroup('GUEST', $event)"
+    (addEmptySearchResponse)="addEmptySearchResponse($event)"
+    (removeEmptySearchResponse)="deleteEmptySearchResponse($event)"
   />
 }
 
